objects/Territory_Recalculation_Job__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WHERE_Clause__c</fullName>
        <label>WHERE Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory Recalculation Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Record_Count__c</columns>
        <columns>WHERE_Clause__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Reason__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Record_Count__c</columns>
        <columns>WHERE_Clause__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Template</value>
        </filters>
        <label>My Jobs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Templates</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Record_Count__c</columns>
        <columns>WHERE_Clause__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Template</value>
        </filters>
        <label>Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Territory Recalculation Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Recalculation Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_change_job</fullName>
        <active>true</active>
        <description>Do not allow any changes once the record has been created and saved except MW Integration user</description>
        <errorConditionFormula>AND
  ( NOT (ISNEW()) 
,
   NOT($User.Id = &apos;005i00000014J7w&apos;)
  
, 
	OR(
		AND(
		ISPICKVAL(Status__c,&apos;Submit&apos;)
		,
		NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;New&quot;))
		)
	,
		AND(
			NOT(ISPICKVAL(Status__c,&apos;Submit&apos;)),
			ISCHANGED(Status__c)
		)
	)   
)</errorConditionFormula>
        <errorMessage>Jobs that have already been submitted cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_select_status_on_new_record</fullName>
        <active>true</active>
        <description>Do not allow users to select other then New or Submitted status when new record has been created</description>
        <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(Status__c,&apos;New&apos;))
,
NOT(ISPICKVAL(Status__c,&apos;Submit&apos;))



)</errorConditionFormula>
        <errorMessage>You can select only New or Submitted job status</errorMessage>
    </validationRules>
</CustomObject>